shorten statistic function

--- a/notebook_1.ipynb
+++ b/notebook_1.ipynb
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "098d3e33",
    "metadata": {},
    "outputs": [
@@ -419,22 +419,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Relevante M30/C30 Sensoren: {'min_intensity': np.int64(1006), 'max_intensity': np.int64(6842), 'mean_intensity': np.int64(3495), 'median_intensity': np.int64(6771), 'mode_intensity': np.int64(6747), 'mean_speed': np.int64(6640)}\n",
-      "Relevante URB Sensoren: {'min_intensity': np.int64(3395), 'max_intensity': np.int64(3624), 'mean_intensity': np.int64(11107), 'median_intensity': np.int64(5331), 'mode_intensity': np.int64(3623), 'mean_speed': np.int64(3395)}\n"
+      "\n",
+      " Relevant statistic for sensor type M30 with aggregation period: None\n",
+      "Sensor id with minimum intensity 1006\n",
+      "Sensor id with maximum intensity 6842\n",
+      "Sensor id closest to mean intensidad: 3495 (value: 1164.5)\n",
+      "Sensor id closest to mean vmed: 6640 (value: 60.6)\n",
+      "Sensor id closest to median intensidad: 6771 (value: 1297.8)\n",
+      "Sensor id closest to median vmed: 3542 (value: 64.2)\n",
+      "Sensor id closest to mode vmed: 3532 (value: 64.2)\n",
+      "Sensor id closest to mode intensidad: 6747 (value: 475.3)\n",
+      "\n",
+      " Relevant statistic for sensor type URB with aggregation period: None\n",
+      "Sensor id with minimum intensity 3395\n",
+      "Sensor id with maximum intensity 3624\n",
+      "Sensor id closest to mean intensidad: 11107 (value: 288.0)\n",
+      "Sensor id closest to mean vmed: 3395 (value: 0.0)\n",
+      "Sensor id closest to median intensidad: 5331 (value: 300.3)\n",
+      "Sensor id closest to median vmed: 3395 (value: 0.0)\n",
+      "Sensor id closest to mode intensidad: 3623 (value: 211.6)\n"
      ]
     }
    ],
    "source": [
-    "def get_relevant_sensors(data, sensor_type):\n",
-    "    \"\"\"Extrahiert die relevantesten Sensoren basierend auf den Statistiken\"\"\"\n",
+    "def get_relevant_sensors(data, sensor_type, aggregation_period = None):\n",
+    "    \"\"\"Create statitsics for all sensors and save relevant sensor ids in dictionary for further plotting\"\"\"\n",
     "    \n",
     "    if sensor_type in [\"M30\", \"C30\"]:\n",
+    "        print(f\"\\n Relevant statistic for sensor type M30 with aggregation period: {aggregation_period}\")\n",
     "        data_filtered = data[(data[\"tipo_elem\"] == \"C30\") | (data[\"tipo_elem\"] == \"M30\")]\n",
     "    elif sensor_type == \"URB\":\n",
+    "        print(f\"\\n Relevant statistic for sensor type URB with aggregation period: {aggregation_period}\")\n",
     "        data_filtered = data[data[\"tipo_elem\"] == \"URB\"]\n",
     "    else:\n",
     "        return None\n",
     "    \n",
+    "    # Resampling but only for numeric columsn\n",
+    "    if aggregation_period is not None:\n",
+    "        # get numeric columns\n",
+    "        numeric_cols = [\"intensidad\", \"vmed\", \"ocupacion\", \"carga\", \"coches_total\"]\n",
+    "        # keep id column to group by\n",
+    "        data_filtered = data_filtered.groupby(\"id\")[numeric_cols].resample(aggregation_period).mean().reset_index(level=0)\n",
+    "\n",
     "    # Aggregierte Statistiken berechnen\n",
     "    data_agg = data_filtered.groupby(\"id\").agg({\n",
     "        \"intensidad\": [\"min\", \"max\", \"mean\", \"median\"], \n",
@@ -457,15 +483,34 @@
     "        'mode_intensity': abs(intensity_modes - intensity_modes.mean()).idxmin(),\n",
     "        'mean_speed': abs(data_agg[\"vmed\"][\"mean\"] - data_agg[\"vmed\"][\"mean\"].mean()).idxmin()\n",
     "    }\n",
+    "\n",
+    "    ## print statistics\n",
+    "    # print sensor with minimum and maximum intensity\n",
+    "    print(f\"Sensor id with minimum intensity {relevant_sensors['min_intensity']}\")\n",
+    "    print(f\"Sensor id with maximum intensity {relevant_sensors['max_intensity']}\")\n",
+    "\n",
+    "    # print sensors closest to mean and median value\n",
+    "    for stat in [\"mean\", \"median\"]:\n",
+    "        for char in [\"intensidad\", \"vmed\"]:\n",
+    "            overall_stat = data_agg[char][stat].mean()\n",
+    "            closest_sensor = abs(data_agg[char][stat] - overall_stat).idxmin()\n",
+    "            print(f\"Sensor id closest to {stat} {char}: {closest_sensor} (value: {overall_stat:.1f})\")\n",
+    "\n",
+    "    # print sensors closest to mode\n",
+    "    # closest sensor to mode \n",
+    "    if sensor_type in [\"M30\", \"C30\"]:\n",
+    "        speed_modes = data_filtered.groupby(\"id\")[\"vmed\"].apply(safe_mode)\n",
+    "        speed_overall_mode = speed_modes.mean()\n",
+    "        closest_sensor_speed_mode = abs(speed_modes - speed_overall_mode).idxmin()\n",
+    "        print(f\"Sensor id closest to mode vmed: {closest_sensor_speed_mode} (value: {speed_overall_mode:.1f})\")\n",
+    "\n",
+    "    print(f\"Sensor id closest to mode intensidad: {relevant_sensors['mode_intensity']} (value: {intensity_modes.mean():.1f})\")\n",
     "    \n",
     "    return relevant_sensors, data_filtered\n",
     "\n",
     "# Relevante Sensoren für M30/C30 und URB identifizieren\n",
-    "m30_sensors, m30_data = get_relevant_sensors(data, \"M30\")\n",
-    "urb_sensors, urb_data = get_relevant_sensors(data, \"URB\")\n",
-    "\n",
-    "print(\"Relevante M30/C30 Sensoren:\", m30_sensors)\n",
-    "print(\"Relevante URB Sensoren:\", urb_sensors)"
+    "m30_sensors, m30_data = get_relevant_sensors(data, \"M30\", aggregation_period = None)\n",
+    "urb_sensors, urb_data = get_relevant_sensors(data, \"URB\", aggregation_period = None)\n"
    ]
   },
   {
@@ -478,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "d46e7f44",
    "metadata": {},
    "outputs": [],
@@ -489,15 +534,14 @@
     "\n",
     "def plot_sensor_traffic(data, sensor_id, sensor_type, date=None):\n",
     "    \"\"\"\n",
-    "    Visualisiert Verkehrsintensität und Geschwindigkeit für einen Sensor\n",
-    "    an einem spezifischen Tag in 15-Minuten und 1-Stunden Intervallen\n",
+    "    visualize data for specific sensor\n",
     "    \"\"\"\n",
     "    \n",
     "    # Sensor-Daten filtern\n",
     "    sensor_data = data[data['id'] == sensor_id].copy()\n",
     "    \n",
     "    if sensor_data.empty:\n",
-    "        print(f\"Keine Daten für Sensor {sensor_id} gefunden!\")\n",
+    "        print(f\"No data for {sensor_id}\")\n",
     "        return\n",
     "    \n",
     "    # Spezifisches Datum wählen (wenn nicht angegeben, nimm den ersten Tag mit Daten)\n",
@@ -508,15 +552,15 @@
     "    daily_data = sensor_data[sensor_data.index.date == pd.to_datetime(date).date()]\n",
     "    \n",
     "    if daily_data.empty:\n",
-    "        print(f\"Keine Daten für Sensor {sensor_id} am {date} gefunden!\")\n",
+    "        print(f\"No data for {sensor_id} on the {date}\")\n",
     "        return\n",
     "    \n",
     "    # Resample für 15 Minuten und 1 Stunde\n",
-    "    data_15min = daily_data.resample('15min').agg({\n",
-    "        'intensidad': 'mean',\n",
-    "        'vmed': 'mean',\n",
-    "        'coches_total': 'sum'\n",
-    "    })\n",
+    "    data_15min = daily_data#.resample('15min').agg({\n",
+    "    #     'intensidad': 'mean',\n",
+    "    #     'vmed': 'mean',\n",
+    "    #     'coches_total': 'sum'\n",
+    "    # })\n",
     "    \n",
     "    data_1hour = daily_data.resample('H').agg({\n",
     "        'intensidad': 'mean', \n",
