fix error message

--- a/notebook_1.ipynb
+++ b/notebook_1.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "098d3e33",
    "metadata": {},
    "outputs": [
@@ -327,20 +327,20 @@
     "        # keep id column to group by\n",
     "        data_filtered = data_filtered.groupby(\"id\")[numeric_cols].resample(aggregation_period).mean().reset_index(level=0)\n",
     "\n",
-    "    # Aggregierte Statistiken berechnen\n",
+    "    # aggregate data by sensor id\n",
     "    data_agg = data_filtered.groupby(\"id\").agg({\n",
     "        \"intensidad\": [\"min\", \"max\", \"mean\", \"median\"], \n",
     "        \"vmed\": [\"min\", \"max\", \"mean\", \"median\"]\n",
     "    })\n",
     "    \n",
-    "    # Modus berechnen\n",
+    "    # calculate mode \n",
     "    def safe_mode(series):\n",
     "        mode_result = series.mode()\n",
     "        return mode_result.iloc[0] if len(mode_result) > 0 else series.median()\n",
     "    \n",
     "    intensity_modes = data_filtered.groupby(\"id\")[\"intensidad\"].apply(safe_mode)\n",
     "    \n",
-    "    # Relevante Sensoren sammeln\n",
+    "    # collect relevant sensors in dictionary\n",
     "    relevant_sensors = {\n",
     "        'min_intensity': data_agg[\"intensidad\"][\"min\"].idxmin(),\n",
     "        'max_intensity': data_agg[\"intensidad\"][\"max\"].idxmax(),\n",
@@ -375,7 +375,7 @@
     "    \n",
     "    return relevant_sensors, data_filtered\n",
     "\n",
-    "# Relevante Sensoren für M30/C30 und URB identifizieren\n",
+    "# use function to get relevant sensors for M30 and URB\n",
     "m30_sensors, m30_data = get_relevant_sensors(data, \"M30\", aggregation_period = None)\n",
     "urb_sensors, urb_data = get_relevant_sensors(data, \"URB\", aggregation_period = None)\n"
    ]
