--- a/notebook_1.ipynb
+++ b/notebook_1.ipynb
@@ -2,10 +2,51 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "63ca0158",
+   "metadata": {},
+   "source": [
+    "# Memoria del Proyecto: Análisis de datos de tráfico en Madrid\n",
+    "\n",
+    "## 1. Introducción\n",
+    "\n",
+    "## 2. Descripción de los Datos\n",
+    "\n",
+    "## 3. Metodología y Herramientas\n",
+    "\n",
+    "## 4. Análisis Exploratorio Obligatorio\n",
+    "\n",
+    "### 4.1 Estadísticas Básicas\n",
+    "\n",
+    "### 4.2 Series Temporales para un Sensor\n",
+    "\n",
+    "## 5. Análisis Avanzado: Agrupación por Distritos\n",
+    "\n",
+    "### 5.1 Análisis del Distrito Céntrico\n",
+    "\n",
+    "### 5.2 Mapa de Sensores y Tráfico\n",
+    "\n",
+    "### 5.3 Intento de Heatmap\n",
+    "\n",
+    "## 6. Discusión y Conclusiones\n",
+    "\n",
+    "## 7. Referencias\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e12a0956",
+   "metadata": {},
+   "source": [
+    "## 1. Introducción\n",
+    "El objetivo de este proyecto es analizar el tráfico en la ciudad de Madrid utilizando datos abiertos obtenidos mediante la API del Ayuntamiento. A través de este estudio, se busca comprender los patrones de circulación y su variación en diferentes áreas y periodos, contribuyendo a la gestión inteligente de la movilidad urbana."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f86126da",
    "metadata": {},
    "source": [
-    "## Download data via API"
+    "### Descargar los datos via API"
    ]
   },
   {
@@ -78,7 +119,7 @@
    "id": "4e427f4e",
    "metadata": {},
    "source": [
-    "## Get overview"
+    "### Datos"
    ]
   },
   {
@@ -271,10 +312,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "baf5333d",
+   "metadata": {},
+   "source": [
+    "#### Descripción de los datos\n",
+    "Para el análisis se han descargado los archivos de datos de tráfico directamente desde la API oficial del Ayuntamiento de Madrid. Los datos se presentan en formato CSV e incluyen variables como id de sensor, fecha y hora, intensidad de tráfico y velocidad media. Antes de la limpieza y el análisis, se eliminaron las entregas erróneas para asegurar la calidad de las estadísticas calculadas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30c95be2",
+   "metadata": {},
+   "source": [
+    "## 2. Análisis de datos\n",
+    "\n",
+    "El procesamiento y análisis de datos se realizaron principalmente con pandas para la manipulación e integración de datos y con matplotlib para la generación de gráficos. Se desarrollaron funciones personalizadas para obtener las estadísticas relevantes necesarias. El proceso se realizó de manera que permite usar las funciones con diferentes datos, sensores de tráfico y periodos de agregación, de modo que se pueden reutilizar las funciones si se quieren analizar otros periodos de tiempo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7cd57ef8",
    "metadata": {},
    "source": [
-    "## Statistics for different sensors"
+    "### Estadisticas por todos los sensores"
    ]
   },
   {
@@ -385,7 +445,7 @@
    "id": "32779f45",
    "metadata": {},
    "source": [
-    "## Plot patterns"
+    "### Gráficas"
    ]
   },
   {
@@ -730,22 +790,21 @@
    "id": "34fa5c21",
    "metadata": {},
    "source": [
-    "### Descripción del plot\n",
+    "### Descripción de las gráficas\n",
     "\n",
     "#### Plot 1: Basic Analysis\n",
-    "Se nota claramente una “rush hour” entre las 7 y las 9 de la mañana, donde el número total de coches sube y la velocidad media baja. También se observa que durante el fin de semana el número total de coches disminuye y la velocidad media aumenta.  \n",
-    "En el análisis semanal se aprecia que el número total de coches se mantiene bastante estable, mientras que la velocidad media baja un poco en la tercera semana de septiembre. En la última semana del mes ambas variables bajan, pero probablemente se deba a que no es una semana completa sino solo los últimos dos días de septiembre.\n",
+    "Se observa claramente una \"hora pico\" entre las 7:00 y las 9:00 horas de la mañana, donde el número total de coches aumenta significativamente y la velocidad media disminuye. Además, durante los fines de semana, el número total de coches disminuye, mientras que la velocidad media aumenta.\n",
+    "En el análisis semanal, se puede apreciar que el número total de coches se mantiene estable, aunque la velocidad media desciende ligeramente durante la tercera semana de septiembre. En la última semana de septiembre, ambos valores (número de coches y velocidad media) disminuyen, lo que probablemente se deba a que no se trata de una semana completa, sino solo de los dos últimos días del mes.\n",
     "\n",
     "#### Plot 2: Weekday patterns\n",
-    "El análisis de los días de la semana muestra un patrón claro: los fines de semana circulan menos coches que entre semana. También se observa que el máximo de coches durante el día ocurre un poco más tarde que en los días laborales.  \n",
-    "Entre las 6 y las 10 de la mañana la velocidad baja y el número de coches sube (el intervalo 24–40 corresponde a las 6:00–10:00 porque cada intervalo son 15 minutos).\n",
+    "El análisis de los patrones por día de la semana muestra que los fines de semana hay menos coches en circulación en comparación con los días laborables. También se observa que el pico máximo de coches durante el día se alcanza un poco más tarde que durante la semana.\n",
+    "Entre las 6:00 y las 10:00 horas de la mañana, la velocidad media disminuye y el número de coches aumenta (el intervalo de tiempo 24-40, que corresponde a 15 minutos cada uno, equivale a las 6:00 de la mañana).\n",
     "\n",
     "#### Plot 3: Weekly patterns\n",
-    "Aquí, otra vez, se nota que durante el fin de semana (sábado y domingo) hay menos coches en la calle y los que circulan lo hacen con una velocidad media más alta que el resto de la semana.  \n",
-    "La tercera semana del mes (week 38) muestra un pico muy alto el viernes. Esto podría deberse a la Vuelta Ciclista a España y la apertura de los cortes del tráfico en la C30/M30.\n",
+    "Nuevamente, se confirma que durante los fines de semana (sábado y domingo) hay menos coches en la calle y estos presentan una velocidad media más alta que el resto de la semana. En la tercera semana del mes (semana 38), se observa un pico muy alto el viernes, tanto en el número de coches como en la velocidad media. Esto podría deberse a la Vuelta Ciclista a España y la apertura de los cortes del tráfico en la C30/M30.\n",
     "\n",
     "#### Plot 4: Comparative analysis\n",
-    "La comparación de los sensores más representativos muestra un patrón que se repite durante el mes. Los días 16 y 17 de septiembre se ve una caída en la intensidad máxima y en la velocidad media. Esto podría deberse a la Vuelta Ciclista a España, que pasó por Madrid ese fin de semana y que provocó cortes de tráfico en la C30/M30.\n"
+    "La comparación de los sensores más representativos muestra un patrón que se repite a lo largo del mes. Los días 16 y 17 de septiembre presentan una caída en la intensidad máxima y en la velocidad media. Según una búsqueda en internet, esto podría deberse a la celebración de la Vuelta Ciclista a España durante ese mes y que provocó cortes de tráfico en la C30/M30.\n"
    ]
   },
   {
@@ -753,7 +812,17 @@
    "id": "efb2162a",
    "metadata": {},
    "source": [
-    "## Do geographical anaylsis"
+    "## 3. Agrupación por Distritos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fbac39f",
+   "metadata": {},
+   "source": [
+    "Se realizó un análisis específico sobre el distrito céntrico, evaluando sus patrones de tráfico. El distrito centro destacó por una intensidad elevada y una dinámica distinta respecto a áreas periféricas, lo que se aprecia en los resultados gráficos.\n",
+    "Se elaboró un mapa de los distritos de Madrid, donde se visualizan todos los sensores y la mediana semanal de vehículos para septiembre, empleando matplotlib para resolver la visualización geográfica ante el fallo de ArcPy. La cartografía muestra claramente la distribución y el peso de cada sensor.\n",
+    "Se intentó generar un mapa de calor mediante Kernel Density Estimation (KDE), pero la implementación no logró producir resultados satisfactorios. Se identificaron dificultades técnicas y de ajuste de parámetros como los principales obstáculos para lograr una visualización adecuada."
    ]
   },
   {
@@ -799,7 +868,7 @@
    "id": "2f1cc1fd",
    "metadata": {},
    "source": [
-    "### Get overview"
+    "### Análisis exploratorio"
    ]
   },
   {
@@ -815,14 +884,6 @@
     "\n",
     "distr_mad = pd.read_csv('/Users/annakober/Desktop/Uni/Master/Erasmus/Programming_cities/ciudades_sostenibles/300497-11326516-distritos-municipales-madrid.csv', sep = ',')\n",
     "ub_sens = pd.read_csv('/Users/annakober/Desktop/Uni/Master/Erasmus/Programming_cities/ciudades_sostenibles/202468-269-intensidad-trafico.csv', sep=';', encoding=\"latin-1\") # for spanish characters\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c3bb42d7",
-   "metadata": {},
-   "source": [
-    "### Merge datasets"
    ]
   },
   {
@@ -1201,7 +1262,7 @@
    "id": "28d9a829",
    "metadata": {},
    "source": [
-    "### Use funcitions from earlier to plot data for the desired district"
+    "### Gráficas por distrito Centro"
    ]
   },
   {
@@ -1283,7 +1344,7 @@
    "id": "4a475db7",
    "metadata": {},
    "source": [
-    "### Aggregate to weekly statistics"
+    "### Aggregación a estadisticas semanales"
    ]
   },
   {
@@ -1461,7 +1522,7 @@
    "id": "f14a43e8",
    "metadata": {},
    "source": [
-    "## Analyse data per district"
+    "### Análisis por distrito"
    ]
   },
   {
@@ -1602,6 +1663,15 @@
     "#### Plot 2: Media semanal de coches por distrito (barras)\n",
     "El gráfico de barras ordena los distritos según su media semanal de coches por sensor. Se calcula como la media semanal de coches por sensor, promediada entre todos los sensores del distrito. Retiro, Salamanca y Arganzuela aparecen como los distritos con mayor intensidad media de tráfico. En contraste, distritos como Vicálvaro, Barajas y Villa de Vallecas registran las medias más bajas de la semana.  \n",
     "Este contraste refleja la diferencia típica entre los distritos centrales (con más actividad, movilidad y densidad) y los distritos residenciales más alejados del centro urbano.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e512dd05",
+   "metadata": {},
+   "source": [
+    "## 4. Conclusión\n",
+    "El estudio permitió identificar diferencias claras en la concentración de tráfico según el tipo de vía y distrito, así como la utilidad de automatizar el cálculo estadístico y la generación de gráficos. La integración completa en Python resultó útil, aunque la falta de ArcGIS y el fallo en la generación del heatmap señalan oportunidades de mejora para próximas versiones. Se propone la extensión del análisis correlacionando eventos urbanos, condiciones ambientales, o periodos más largos."
    ]
   }
  ],
