--- a/notebook_1.ipynb
+++ b/notebook_1.ipynb
@@ -7,29 +7,10 @@
    "source": [
     "# Memoria del Proyecto: Análisis de datos de tráfico en Madrid\n",
     "\n",
-    "## 1. Introducción\n",
-    "\n",
-    "## 2. Descripción de los Datos\n",
-    "\n",
-    "## 3. Metodología y Herramientas\n",
-    "\n",
-    "## 4. Análisis Exploratorio Obligatorio\n",
-    "\n",
-    "### 4.1 Estadísticas Básicas\n",
-    "\n",
-    "### 4.2 Series Temporales para un Sensor\n",
-    "\n",
-    "## 5. Análisis Avanzado: Agrupación por Distritos\n",
-    "\n",
-    "### 5.1 Análisis del Distrito Céntrico\n",
-    "\n",
-    "### 5.2 Mapa de Sensores y Tráfico\n",
-    "\n",
-    "### 5.3 Intento de Heatmap\n",
-    "\n",
-    "## 6. Discusión y Conclusiones\n",
-    "\n",
-    "## 7. Referencias\n"
+    "### Clase: Programmación informática aplicada a las ciudades inteligentes \n",
+    "### Profesor: Ruben Fuentes Fernandez\n",
+    "### Nombre: Anna Köber\n",
+    "### Fecha de entrega: 16.11.2025"
    ]
   },
   {
