--- a/notebook_1.ipynb
+++ b/notebook_1.ipynb
@@ -10,7 +10,8 @@
     "### Clase: Programmación informática aplicada a las ciudades inteligentes \n",
     "### Profesor: Ruben Fuentes Fernandez\n",
     "### Nombre: Anna Köber\n",
-    "### Fecha de entrega: 16.11.2025"
+    "### Fecha de entrega: 16.11.2025\n",
+    "### Enlace al GitHub: https://github.com/annak1800/ciudades_sostenibles.git "
    ]
   },
   {
